@@ -1,1 +1,0 @@
-dex/build/docs/javadoc   usr/share/doc/libdex-java/api
