@@ -1,1 +1,0 @@
-dex/build/dex.pom --artifact=dex/build/libs/dex-*.jar --java-lib
